--- a/packages/core/src/components/push-card/push-card.scss
+++ b/packages/core/src/components/push-card/push-card.scss
@@ -56,6 +56,10 @@
   ix-card.card-neutral:hover {
     --ix-card-background: var(--theme-color-neutral--hover);
   }
+
+  ix-card.card-primary:hover {
+    --ix-card-background: var(--theme-color-primary--hover);
+  }
 }
 
 :host(:active) {
@@ -89,5 +93,9 @@
 
   ix-card.card-neutral:active {
     --ix-card-background: var(--theme-color-neutral--active);
+  }
+
+  ix-card.card-primary:active {
+    --ix-card-background: var(--theme-color-primary--active);
   }
 }
