--- a/packages/core/src/components/date-picker/date-picker.scss
+++ b/packages/core/src/components/date-picker/date-picker.scss
@@ -13,6 +13,10 @@
 :host {
   @include ix-component;
 
+  .container {
+    max-width: 352px;
+  }
+
   .header {
     display: flex;
     align-items: center;
