--- a/packages/core/src/components/date-input/date-input.scss
+++ b/packages/core/src/components/date-input/date-input.scss
@@ -36,6 +36,14 @@
     }
   }
 
+  span {
+    &.vertical-align {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+    }
+  }
+
   ix-dropdown {
     margin-top: 0.25rem !important;
     padding: 0;
