--- a/packages/core/src/components/date-dropdown/date-dropdown.scss
+++ b/packages/core/src/components/date-dropdown/date-dropdown.scss
@@ -15,15 +15,19 @@
 
   @media screen and (max-width: 500px) {
     .min-width {
-      max-height: max-content;
       width: min-content;
     }
   }
 
   @media screen and (min-width: 500px) {
+
     .border-right {
       border-right: var(--theme-x-weak-bdr-2);
     }
+  }
+
+  .max-height {
+    max-height: max-content;
   }
 
   .no-margin {
