feat(core/date-input): add validation configuration

--- a/packages/core/src/components/date-input/date-input.scss
+++ b/packages/core/src/components/date-input/date-input.scss
@@ -14,6 +14,19 @@
   flex-direction: row;
 }
 
+:host(.is-invalid) {
+  .invalid-feedback {
+    display: block;
+    color: var(--theme-color-alarm-text);
+  }
+}
+
+:host(.is-valid) {
+  .invalid-feedback {
+    display: none;
+  }
+}
+
 :host {
   @include ix-component;
 
