feat(core/date-/datetime-picker): add hover styling

--- a/packages/core/src/components/date-input/date-input.scss
+++ b/packages/core/src/components/date-input/date-input.scss
@@ -80,6 +80,15 @@
     border: var(--theme-input--border-thickness, 1px) solid
       var(--theme-input--border-color);
 
+    &:hover {
+      border-color: var(--theme-input--border-color--hover);
+      background-color: var(--theme-input--background--hover);
+
+      input {
+        background-color: var(--theme-input--background--hover);
+      }
+    }
+
     &:focus-within {
       outline: 1px solid var(--theme-color-focus-bdr);
       outline-offset: var(--theme-input--focus--outline-offset);
