feat(core/date-dropdown): changed breakpoints and documentation,

--- a/packages/core/src/components/date-dropdown/date-dropdown.scss
+++ b/packages/core/src/components/date-dropdown/date-dropdown.scss
@@ -12,15 +12,13 @@
 :host {
   @include ix-component;
   display: block;
-
-  @media screen and (max-width: 500px) {
+  @media (max-width: 48em) {
     .min-width {
       width: min-content;
     }
   }
 
-  @media screen and (min-width: 500px) {
-
+  @media (min-width: 48em) {
     .border-right {
       border-right: var(--theme-x-weak-bdr-2);
     }
