fix(core/button): prevent ix-icon interaction of ix-icon

--- a/packages/core/src/components/button/button-mixin.scss
+++ b/packages/core/src/components/button/button-mixin.scss
@@ -143,6 +143,10 @@
     .content-start {
       width: 100%;
     }
+
+    .icon {
+      pointer-events: none;
+    }
   }
 
   :host(.disabled) {
