chore: add comment

--- a/packages/core/src/components/button/button-mixin.scss
+++ b/packages/core/src/components/button/button-mixin.scss
@@ -145,6 +145,8 @@
     }
 
     .icon {
+      // Prevents icon to show title tooltip
+      // if embedded is ix-icon-button or ix-button[icon]
       pointer-events: none;
     }
   }
