--- a/packages/core/src/components/time-picker-rework/time-picker-rework.scss
+++ b/packages/core/src/components/time-picker-rework/time-picker-rework.scss
@@ -16,6 +16,30 @@
 
   @import 'legacy/components/forms';
 
+  @media (max-width: 576px) {
+    .clock {
+      padding: 1.5rem 0;
+    }
+
+    .header {
+      height: $medium-control-height !important;
+    }
+  }
+
+  @media (min-width: 576px) {
+    .clock {
+      padding: 4.25rem 0;
+    }
+
+    .header {
+      height: $large-control-height !important;
+    }
+  }
+
+  .container {
+    max-width: 352px;
+  }
+
   .header {
     display: flex;
     align-items: center;
@@ -31,7 +55,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 4.25rem 0;
   }
 
   input,
