feat(core/date-picker-refactor): fixed tests

--- a/packages/core/src/components/datetime-picker-rework/datetime-picker-rework.scss
+++ b/packages/core/src/components/datetime-picker-rework/datetime-picker-rework.scss
@@ -45,9 +45,9 @@
 
   .btn-select-date {
     position: absolute;
-    bottom: $tiny-space;
-    right: $tiny-space;
-    left: $tiny-space;
+    bottom: $default-space;
+    right: $default-space;
+    left: $default-space;
   }
 
 }
