fix: padding stuff

--- a/packages/core/scss/components/form/_input.scss
+++ b/packages/core/scss/components/form/_input.scss
@@ -166,6 +166,13 @@
       }
     }
   }
+
+  form:not(.was-validated) {
+    .invalid-feedback,
+    .valid-feedback {
+      display: none !important;
+    }
+  }
 }
 
 @include form;
