fix(core/button): prevent interaction of ix-icon (#839)
Co-authored-by: Lukas Maurer <lukas.maurer@siemens.com>

--- a/packages/core/src/components/button/button-mixin.scss
+++ b/packages/core/src/components/button/button-mixin.scss
@@ -143,6 +143,12 @@
     .content-start {
       width: 100%;
     }
+
+    .icon {
+      // Prevents icon to show title tooltip
+      // if embedded in ix-icon-button or ix-button[icon]
+      pointer-events: none;
+    }
   }
 
   :host(.disabled) {
