feat(core/date-picker-refactor): corrections based on feedback

--- a/packages/core/src/components/time-picker-rework/time-picker-rework.scss
+++ b/packages/core/src/components/time-picker-rework/time-picker-rework.scss
@@ -16,6 +16,8 @@
   @import 'legacy/components/forms';
 
   display: block;
+  position: relative;
+  width: 22rem;
 
   @media (max-width: 576px) {
     .clock {
