feat(core/date-picker-refactor): adjustments according to changes

--- a/packages/core/src/components/datetime-picker-rework/datetime-picker-rework.scss
+++ b/packages/core/src/components/datetime-picker-rework/datetime-picker-rework.scss
@@ -19,6 +19,10 @@
   position: relative;
   width: min-content;
 
+  .min-width {
+    width: min-content;
+  }
+
   .no-padding {
     padding: 0;
   }
