fix(core/event-list-item): fix right padding

--- a/packages/core/src/components/event-list-item/event-list-item.scss
+++ b/packages/core/src/components/event-list-item/event-list-item.scss
@@ -72,6 +72,7 @@ $default-event-list-item-height: 2.5rem;
       );
       border-left: none;
       padding-left: $default-space;
+      padding-right: $default-space;
     }
 
     .event-content {
