--- a/packages/documentation/static/code-runtime/angular/src/styles.css
+++ b/packages/documentation/static/code-runtime/angular/src/styles.css
@@ -1,2 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@siemens/ix/dist/siemens-ix/siemens-ix.css';
+@import 'ag-grid-community/styles/ag-grid.css';
+@import 'ag-grid-community/styles/ag-theme-alpine.css';
+@import '@siemens/ix-aggrid/dist/ix-aggrid/ix-aggrid.css';
