--- a/packages/documentation/static/code-runtime/angular/src/styles.css
+++ b/packages/documentation/static/code-runtime/angular/src/styles.css
@@ -9,3 +9,8 @@
 @import 'ag-grid-community/styles/ag-theme-alpine.css';
 @import '@siemens/ix-aggrid/dist/ix-aggrid/ix-aggrid.css';
 @import './styles/placeholder-logo.css';
+
+body {
+  height: 100vh;
+  width: 100vw;
+}
