--- a/packages/core/src/components/blind/blind.scss
+++ b/packages/core/src/components/blind/blind.scss
@@ -90,7 +90,6 @@
     z-index: 1;
 
     pointer-events: none;
-
     padding-left: 0.5rem;
   }
 
@@ -115,6 +114,7 @@
 
     pointer-events: all;
 
+    padding-left: 2.5rem;
     min-height: 3rem;
     height: 3rem;
     width: calc(100% - 2 * var(--theme-blind--border-thickness));
