fix(core/menu-item): suppress icon tooltip

--- a/packages/core/src/components/menu-item/menu-item.scss
+++ b/packages/core/src/components/menu-item/menu-item.scss
@@ -40,6 +40,7 @@ $menuItemPadding: 0.875rem;
   .tab-icon {
     color: var(--theme-nav-item-primary-icon--color);
     position: relative;
+    pointer-events: none;
   }
 
   .tab:focus-visible {
