--- a/packages/core/src/components/group/group.scss
+++ b/packages/core/src/components/group/group.scss
@@ -98,6 +98,7 @@
     justify-content: space-between;
     min-width: 0;
     flex-grow: 1;
+    flex-basis: 0;
     padding: 0.5rem;
     padding-left: 0;
 
@@ -116,6 +117,7 @@
         @include ellipsis;
 
         min-width: 0;
+        padding-right: 0;
       }
     }
 
