fix: code envs new styling

--- a/packages/documentation/static/code-runtime/angular/src/styles.css
+++ b/packages/documentation/static/code-runtime/angular/src/styles.css
@@ -11,9 +11,4 @@
 @import '@siemens/ix/dist/siemens-ix/siemens-ix.css';
 @import 'ag-grid-community/styles/ag-grid.css';
 @import 'ag-grid-community/styles/ag-theme-alpine.css';
-@import './styles/placeholder-logo.css';
-
-body {
-  height: 100vh;
-  width: 100vw;
-}
+@import './styles/styles.css';
