--- a/packages/html-test-app/src/preview-examples/styles/styles.css
+++ b/packages/html-test-app/src/preview-examples/styles/styles.css
@@ -1,7 +1,38 @@
+@import 'ag-grid-community/styles/ag-grid.css';
+@import 'ag-grid-community/styles/ag-theme-alpine.css';
+@import '@siemens/ix-aggrid/dist/ix-aggrid/ix-aggrid.css';
+
+
 body {
   width: 100vw;
   height: 100vh;
 }
+
+
+ix-icon-toggle-button {
+  margin: 0.25rem;
+}
+
+
+ix-toggle-button {
+  margin: 0.25rem;
+}
+
+
+ix-pill {
+  margin: 0 0.5rem 0.5rem 0;
+}
+
+
+ix-tile {
+  margin-bottom: 0.5rem;
+}
+
+
+ix-blind {
+  margin: 0.5rem 0;
+}
+
 
 .placeholder-logo {
   float: left;
@@ -15,6 +46,7 @@ body {
   align-items: center;
 }
 
+
 .dropdown-button {
   display: flex;
   flex-direction: column;
@@ -24,5 +56,115 @@ body {
 }
 
 .dropdown-button > ix-dropdown-button {
+  margin-bottom: 0.5rem;
+}
+
+
+.echarts {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 40rem
+}
+
+
+.flip-tile {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  position: relative;
+  margin-top: 2rem;
+  max-width: 100%;
+  flex-wrap: wrap;
+}
+
+.flip-tile > ix-flip-tile {
+  margin: 0 0.5rem 0.5rem 0;
+}
+
+
+.kpi {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  max-width: 20rem;
+}
+
+.kpi > ix-kpi {
+  margin: 0.5rem;
+}
+
+
+.grid {
+  padding-top: 1rem;
+  padding-bottom: 0.25rem;
+  background-color: var(--theme-color-ghost--hover);
+}
+
+.grid > ix-layout-grid {
+  margin-bottom: 1rem;
+}
+
+.grid > ix-layout-grid > ix-row > ix-col ix-typography {
+  display: flex;
+  padding: 0.5rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1 0 0;
+  align-self: stretch;
+  border: 1px solid var(--theme-color-soft-bdr);
+  background: var(--theme-color-ghost);
+  border-radius: 3px;
+}
+
+
+.modal-sizes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modal-sizes > ix-button {
+  width: auto;
+  margin: 0.25rem;
+}
+
+
+.radio-button {
+  display: flex;
+  flex-direction: column;
+}
+
+.radio-button > label {
+  margin-bottom: 0.5rem;
+}
+
+
+.tabs {
+  display: block;
+  position: relative;
+  width: 100%;
+}
+
+.tabs > div[data-tab-content] {
+  display: none;
+}
+
+.tabs > div[data-tab-content].show {
+  display: block;
+}
+
+
+.chip {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  max-width: 20rem;
+}
+
+.chip > ix-chip {
   margin-bottom: 0.5rem;
 }
