--- a/packages/core/src/components/application-header/application-header.scss
+++ b/packages/core/src/components/application-header/application-header.scss
@@ -18,7 +18,7 @@
   width: 100%;
   height: 2.75rem;
   min-height: 2.75rem;
-  padding: 0 1rem;
+  padding: 0 1rem 0 0.5rem;
 
   color: var(--theme-app-header--color);
   background-color: var(--theme-app-header--background);
@@ -27,6 +27,10 @@
     var(--theme-app-header--border-color);
 
   z-index: var(--theme-z-index-fixed);
+
+  .app-switch {
+    margin-right: 1rem;
+  }
 
   .name {
     overflow: hidden;
@@ -47,6 +51,7 @@
     overflow: hidden;
     line-height: 0rem;
     color: var(--theme-app-header-logo--color);
+    margin-left: 0.375rem;
   }
 
   .content {
