--- a/packages/core/src/components/menu/menu.scss
+++ b/packages/core/src/components/menu/menu.scss
@@ -89,10 +89,6 @@ $menu-expanded-width: 16rem;
 
     background-color: var(--theme-nav--background);
     transition: width var(--animate-duration) ease-in-out;
-
-    .burger-menu {
-      margin: 0.75rem 0 1rem 0.35rem;
-    }
   }
 
   .menu-overlay {
@@ -150,6 +146,14 @@ $menu-expanded-width: 16rem;
   .bottom-tab-divider {
     margin-top: auto;
   }
+
+  .menu-buttons {
+    margin: 0.5rem 0 0 0.5rem;
+  }
+
+  .menu-buttons > :last-child {
+    margin-bottom: 1rem;
+  }
 }
 
 :host(.breakpoint-sm) {
@@ -158,7 +162,7 @@ $menu-expanded-width: 16rem;
   }
 
   .menu {
-    padding-top: 2rem;
+    padding-top: 0.5rem;
   }
 
   .menu .burger-menu {
