refactor(core/date-input): use relative units

--- a/packages/core/src/components/date-input/date-input.scss
+++ b/packages/core/src/components/date-input/date-input.scss
@@ -59,11 +59,11 @@
     }
 
     &.left-position {
-      margin-right: 10px;
+      margin-right: 10rem;
     }
 
     &.inside-position {
-      margin-left: 5px;
+      margin-left: 5rem;
     }
   }
 
