--- a/packages/core/src/components/date-input/date-input.scss
+++ b/packages/core/src/components/date-input/date-input.scss
@@ -59,11 +59,11 @@
     }
 
     &.left-position {
-      margin-right: 10rem;
+      margin-right: 1rem;
     }
 
     &.inside-position {
-      margin-left: 5rem;
+      margin-left: 0.625rem;
     }
   }
 
@@ -74,6 +74,7 @@
   }
 
   .date-input {
+    width: 100%;
     display: flex;
 
     background-color: var(--theme-input--background);
