--- a/packages/core/src/components/date-input/date-input.scss
+++ b/packages/core/src/components/date-input/date-input.scss
@@ -52,6 +52,10 @@
   }
 
   span {
+    &.disabled {
+      color: var(--theme-input--color--disabled);
+    }
+
     &.vertical-align {
       display: flex;
       flex-direction: row;
@@ -81,6 +85,23 @@
     border-radius: var(--theme-input--border-radius);
     border: var(--theme-input--border-thickness, 1px) solid
       var(--theme-input--border-color);
+
+    &.disabled {
+      background-color: var(--theme-input--background--disabled);
+      border-radius: var(--theme-input--border-radius);
+      border: var(--theme-input--border-thickness, 1px) solid var(--theme-input--border-color--disabled);
+      border-bottom: var(--theme-input--border-thickness, 1px) solid var(--theme-input--border-color-bottom--disabled);
+
+      &:hover {
+        border-color: var(--theme-input--border-color--disabled);
+        border-bottom: var(--theme-input--border-thickness, 1px) solid var(--theme-input--border-color-bottom--disabled);
+        background-color: var(--theme-input--background--disabled);
+    
+        input {
+          background-color: var(--theme-input--background--disabled);
+        }
+      }
+    }
 
     &:hover {
       border-color: var(--theme-input--border-color--hover);
