--- a/packages/core/src/components/datetime-input/datetime-input.scss
+++ b/packages/core/src/components/datetime-input/datetime-input.scss
@@ -102,6 +102,27 @@
     border-radius: var(--theme-input--border-radius);
     border: var(--theme-input--border-thickness, 1px) solid var(--theme-input--border-color);
 
+    &.disabled {
+      background-color: var(--theme-input--background--disabled);
+      border-radius: var(--theme-input--border-radius);
+      border: var(--theme-input--border-thickness, 1px) solid var(--theme-input--border-color--disabled);
+      border-bottom: var(--theme-input--border-thickness, 1px) solid var(--theme-input--border-color-bottom--disabled);
+
+      input {
+        background-color: var(--theme-input--background--disabled);
+      }
+  
+      &:hover {
+        border-color: var(--theme-input--border-color--disabled);
+        border-bottom: var(--theme-input--border-thickness, 1px) solid var(--theme-input--border-color-bottom--disabled);
+        background-color: var(--theme-input--background--disabled);
+  
+        input {
+          background-color: var(--theme-input--background--disabled);
+        }
+      }
+    }
+
     &:hover {
       border-color: var(--theme-input--border-color--hover);
       background-color: var(--theme-input--background--hover);
