fix(core/date-/datetime-input): remove margins

--- a/packages/core/src/components/datetime-input/datetime-input.scss
+++ b/packages/core/src/components/datetime-input/datetime-input.scss
@@ -155,6 +155,12 @@
 
     input {
       border: 0;
+      max-width: 6.5rem;
+    }
+
+    .fill-width {
+      width: 100%;
+      max-width: 100%;
     }
 
     .icon-button {
