--- a/packages/core/src/components/modal-content/modal-content.scss
+++ b/packages/core/src/components/modal-content/modal-content.scss
@@ -15,5 +15,5 @@
   position: relative;
   overflow: auto;
   padding: 0.125rem 0.625rem 0.125rem 0.625rem;
-  height: calc(80vh - 116px - 1em);
+  max-height: calc(80vh - 116px - 1em);
 }
