fix(core/key-value-list-label): label behavior

--- a/packages/core/src/components/key-value/key-value.scss
+++ b/packages/core/src/components/key-value/key-value.scss
@@ -17,6 +17,9 @@
 
     .content__label {
       color: var(--theme-color-soft-text);
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
     }
 
     .content__value {
