refactor(core/date-dropdown): simplyfy range structure

--- a/packages/core/src/components/date-dropdown/date-dropdown.scss
+++ b/packages/core/src/components/date-dropdown/date-dropdown.scss
@@ -11,7 +11,9 @@
 
 :host {
   @include ix-component;
-  display: block;
+  display: inline-block;
+  position: relative;
+
   @media (max-width: 48em) {
     .min-width {
       width: min-content;
