--- a/packages/core/src/components/side-panel/side-panel.scss
+++ b/packages/core/src/components/side-panel/side-panel.scss
@@ -3,46 +3,64 @@
 @import 'mixins/shadow-dom/component';
 @import '~animate.css/animate.min';
 
-$menu-expanded-width: 16rem;
+$side-pane-expanded-width: 16rem;
 
 :host {
   @include ix-component;
-  display: block;
-  height: 100%;
-  width: auto;
   background-color: var(--theme-nav--background);
   position: fixed;
 
-  .side-pane {
-    width: 32px;
+  .side-pane-horizontal {
+
+  }
+
+  .side-panel-vertical {
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 
-    &.expanded {
-      width: $menu-expanded-width;
-      align-items: start;
-      padding: 0.5rem;
-    }
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
-    &:not(.expanded) {
       .rotate {
         writing-mode: vertical-lr;
         text-orientation: mixed;
         transform: rotate(180deg);
       }
+    }
 
+    &.expanded {
       .container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
+        flex-direction: row;
 
-      .btn-expand {
-        margin: 0.75rem 0 1rem 0;
+        .rotate {
+          writing-mode: unset;
+          text-orientation: unset;
+          transform: unset;
+        }
       }
-
     }
   }
+
+}
+
+
+:host(.host-horizontal) {
+  width: 100%;
+  height: 32px;
+}
+
+:host(.host-horizontal.expanded) {
+  width: 100%;
+  height: $side-pane-expanded-width;
+}
+
+:host(.host-vertical) {
+  height: 100%;
+  width: 32px;
+}
+
+:host(.host-vertical.expanded) {
+  height: 100%;
+  width: $side-pane-expanded-width;
 }
