--- a/packages/core/src/components/empty-state/empty-state.scss
+++ b/packages/core/src/components/empty-state/empty-state.scss
@@ -43,6 +43,11 @@
       gap: $small-space;
     }
   }
+
+  .label__subHeader,
+  ix-typography {
+    text-align: center;
+  }
 }
 
 :host(.emptyState.emptyState--compact) {
