--- a/packages/core/src/components/side-panel/side-panel.scss
+++ b/packages/core/src/components/side-panel/side-panel.scss
@@ -4,65 +4,69 @@
 @import '~animate.css/animate.min';
 
 $side-pane-expanded-width: 16rem;
+$side-pane-mini-content-width: 76px;
 
 :host {
+  display: flex;
   @include ix-component;
   background-color: var(--theme-nav--background);
 
-  .side-pane-horizontal {
+  .side-panel-horizontal {
+    background-color: var(--theme-nav--background);
 
+    height: 32px;
+    width: 100%;
   }
 
-  .side-panel-vertical {
-    display: block;
-    height: 100%;
-    margin: 32px;
-
+  @media (max-width: 767px) {
+    .side-panel-vertical {
+      background-color: var(--theme-nav--background);
+      width: 100%;
+    }
 
     .container {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-
-      .rotate {
-        writing-mode: vertical-lr;
-        text-orientation: mixed;
-        transform: rotate(180deg);
-      }
-    }
-
-    &.expanded {
-      .container {
-        flex-direction: row;
-
-        .rotate {
-          writing-mode: unset;
-          text-orientation: unset;
-          transform: unset;
-        }
-      }
+      flex-direction: row-reverse;
+      justify-content: space-between;
     }
   }
 
-}
+  @media (min-width: 768px) {
+    .side-panel-vertical {
+      background-color: var(--theme-nav--background);
 
+      height: 100%;
+      width: 32px;
 
-:host(.host-horizontal) {
-  width: 100%;
-  height: 32px;
-}
+      &:not(.expanded) {
+        width: 100%;
 
-:host(.host-horizontal.expanded) {
-  width: 100%;
-  height: $side-pane-expanded-width;
-}
+        .container {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
 
-:host(.host-vertical) {
-  height: 100%;
-  width: 32px;
-}
+          .rotate {
+            writing-mode: vertical-lr;
+            text-orientation: mixed;
+            transform: rotate(180deg);
+          }
+        }
+      }
 
-:host(.host-vertical.expanded) {
-  height: 100%;
-  width: $side-pane-expanded-width;
+      &.expanded {
+        .container {
+          display: flex;
+          flex-direction: row;
+          width: 100%;
+        }
+      }
+
+      &.mini-content {
+        width: $side-pane-mini-content-width;
+      }
+
+    }
+  }
+
 }
